array.island.Island.scala.error
Erreur de compilation :
Island:3: error: not found: value DouleEtage
  DouleEtage=0      //variable augmentant a chaque mont?e ou descente
  ^Island:4: error: Int does not take parameters
  for (k <- 0 to num.size()){   //parcours de la liste
                         ^Island:7: error: not found: value DoubleEtage
      DoubleEtage=DoubleEtage+1 
      ^Island:13: error: not found: value DoubleEtage
        return DoubleEtage/2
               ^